Update build_check.yaml to include push event on specific branches and file extensions

--- a/.github/workflows/build_check.yaml
+++ b/.github/workflows/build_check.yaml
@@ -10,6 +10,18 @@ on:
       - '**/*.json'
       - '**/*.yml'
       - '**/*.yaml'
+  push:
+    branches:
+      - main
+      - develop
+    paths:
+      - '**/*.js'
+      - '**/*.ts'
+      - '**/*.jsx'
+      - '**/*.tsx'
+      - '**/*.json'
+      - '**/*.yml'
+      - '**/*.yaml'
 
 jobs:
   setup:
